Add additional information about the project

--- a/IdentityDemo/Pages/Index.razor
+++ b/IdentityDemo/Pages/Index.razor
@@ -1,6 +1,13 @@
 ﻿@page "/"
 
-<h1>Data provider demo using Identity</h1>
-
-<h4>User: sysadmin@mydomain.com</h4>
-<h4>Password: 123456</h4>
+<h1>Data provider demonstration using Identity</h1>
+<hr />
+<div>
+    <p style="text-align: justify;">
+        This can be used as a test base for Blazor/ASP.Net projects that use Identity without having to get it connected to a
+        database server. Sample data can be seed to have basics for every test during development, it is also possible to run
+        it on a docker container that data will persist until the container gets restarted.
+    </p>
+    <h6>User: sysadmin@mydomain.com</h6>
+    <h6>Password: 123456</h6>
+</div>
