--- a/IdentityDemo/Shared/NavMenu.razor
+++ b/IdentityDemo/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Entities
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="commands">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Commands
+            </NavLink>
+        </li>
     </ul>
 </div>
 
